# football_analytics

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yml
football_analytics/: __init__.py
football_analytics/analytics/: form.py
football_analytics/data/: __init__.py  football_data_client.py  statsbomb_client.py
football_analytics/utils/: __init__.py  exceptions.py
